修改 html 中 引入的檔案名稱

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./workfive.css">
+    <link rel="stylesheet" href="./all.css">
 </head>
 <body>
     <section class="addTicket-panel">
@@ -215,6 +215,6 @@
         <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/js_week5/no_found.png?raw=true" alt="">
       </div>
     </section>
-    <script src="./workfive.js"></script>
+    <script src="./all.js"></script>
   </body>
 </html>
